--- a/_includes/js.html
+++ b/_includes/js.html
@@ -10,5 +10,8 @@
   ga('create', '{{ site.owner.google.analytics }}', 'auto');
   ga('send', 'pageview');
 </script>
-
+<!-- Mathjax Support -->
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
 {% endif %}
