--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,5 +1,10 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+	This is personal blog for summary of paper, trouble shooting methods frequently occurred and programming techniques including development environment setting and tools. It is the first time to manage blog in Github.io, so I'm still fixing my blog
+    TO DO<br>
+    - Arrange categories<br>
+    - Add circum vitae<br>
+    - Set paper summary templete<br>
+    - Remove default data
 </div>
