Update blog info

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,7 +1,7 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-	This is personal blog for summary of paper, trouble shooting methods frequently occurred and programming techniques including development environment setting and tools. It is the first time to manage blog in Github.io, so I'm still fixing my blog
+	This is a personal blog for summary of paper, trouble shooting experiences and programming techniques including development environment setting and tools.
 	<br>
     TO DO<br>
     - Arrange categories<br>
