--- a/_sass/components/_grid.scss
+++ b/_sass/components/_grid.scss
@@ -5,7 +5,7 @@
 // Container
 .container {
   margin: 0 auto;
-  max-width: 900px;
+  max-width: 1280px;
   width: 90%;
 }
 @include media-query($medium-screen) {
@@ -25,6 +25,8 @@
 
 // Section
 .section {
+  max-width: 900px;
+  margin: auto;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
 
