fix post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 ---
-
+<!--home button(inactivated)
 <a class="btn" href= "{{ site.url }}/" >
   Home
-</a>
+</a>-->
 {% if page.image.feature %}
 <div class="post-image-feature">
   <img class="feature-image" src=
@@ -39,7 +39,7 @@ layout: default
     {{ content }}
   </article>
 </div>
-
+<!-- share btns
 <div class="share-buttons">
   <h6>Share on: </h6>
   <ul>
@@ -59,7 +59,7 @@ layout: default
       <a href="https://www.reddit.com/submit?url={{ site.url }}{{ page.url }}" class="reddit btn" title="Share on Reddit"><i class="fa fa-reddit"></i><span> Reddit</span></a>
     </li>
   </ul>
-</div><!-- end share-buttons -->
+</div>end share-buttons -->
 
 {% if site.owner.disqus-shortname and page.comments == true %}
 <div id="disqus_thread"></div>
