--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -1,5 +1,6 @@
 // Post listing
 .post-listing {
+
   background-color: $white;
   position: absolute;
   top: 400px;
@@ -89,7 +90,9 @@ a.read-more {
 // Post content
 
 #post {
-  padding-bottom: 50px;
+  max-width: 900px;
+  margin: auto;
+  //padding-bottom: 50px;
   .post-header {
     margin: 0 auto 50px;
   }
