image caption test

--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -107,6 +107,11 @@ a.read-more {
     width: 1em;
     margin-left: -1em;
   }
+  img + em{
+    display: block;
+    font-size: 0.8em;
+    color: #525252;
+  }
 }
 
 #post h1 {
