image caption test

--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -110,7 +110,8 @@ a.read-more {
   img + em{
     display: block;
     font-size: 0.8em;
-    color: #525252;
+    text-align: center;
+    color: #828282;
   }
 }
 
