--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -4,6 +4,11 @@
     <div class="row">
             <div class="col">
                 <h2 style="margin: 0">{{ project.name }}</h2>
+                {% if project.image %}
+                <p>
+                    <img src="{{ project.image }}">
+                </p>
+                {% endif %}
                 <p style="margin: 0">{{ project.descr }}</p>
 
                 {% if project.github %}
