--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -6,7 +6,7 @@
                 <h2 style="margin: 0">{{ project.name }}</h2>
                 {% if project.image %}
                 <p>
-                    <img src="{{ project.image }}">
+                    <img src="{{ project.image }}" style="max-height: 15em;">
                 </p>
                 {% endif %}
                 <p style="margin: 0">{{ project.descr }}</p>
