Update resume page

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,11 +1,11 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-	This is a personal blog for summary of paper, trouble shooting experiences and programming techniques including development environment setting and tools.
+	I am PhD student at the <a href="https://skku.edu">Sungkyunkwan University</a>
+	under supervision of <a href="https://sites.google.com/site/jaepilheo/">Jae-pil Heo</a>. 
 	<br>
-    TO DO<br>
-    - Arrange categories<br>
-    - Add circum vitae<br>
-    - Set paper summary templete<br>
-    - Remove default data
+	Currently, I withdraw from school temporarily and am looking for a job.
+	I am interested in deep learning and similarity learning including image retrieval, person re-identification.
+	<br>
+	[<a href="https://daehyun-bae.github.io/CV_DaehyunBae.pdf">CV</a>] [<a href="https://drive.google.com/drive/folders/1HY_rrCzyYVZwYZ8-NEqw17mPYAYz0BJR?usp=sharing">Portfolio</a>]
 </div>
