--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -11,20 +11,30 @@ layout: default
         
         <div class="row">
             <div class="col">
+                {% include sections/publication.html %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
                 {% include sections/projects.html %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                {% include sections/experience.html %}
             </div>
         </div>
     </div>
 
     <div class="col l4 offset-l1">
-        <div class="row">
-            {% include sections/skills.html %}    
-        </div>
-        <div class="row">
+        <!--div class="row">
             {% include sections/career.html %}    
-        </div>
+        </div-->
         <div class="row">
             {% include sections/education.html %}    
+        </div>
+        <div class="row">
+            {% include sections/skills.html %}    
         </div>
     </div>
     
