--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -113,18 +113,26 @@ a.read-more {
     text-align: center;
     color: #828282;
   }
+  img{
+    margin: 3em 0 1.2em;
+  }
 }
 
 #post h1 {
   margin: 0.5em 0 1em;
 }
 #post h2 {
-  margin: 2em 0 0.8em;
+  margin: 4em 0 0.8em;
   padding-bottom: 0.7em;
   border-bottom: 1px solid #ddd;
 }
 #post h3 {
-  margin: 1.75em 0 1.2em;
+  margin: 4em 0 0.5em;
+  position: relative;
+}
+
+#post h4 {
+  margin: 4em 0 0.5em;
   position: relative;
 }
 
