--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -114,7 +114,8 @@ a.read-more {
     color: #828282;
   }
   img{
-    margin: 3em 0 1.2em;
+    margin-top: 3em;
+    margin-bottom: 1.2em;
   }
 }
 
