fix resume, guideline page

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,10 +1,10 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-	I am PhD student at the <a href="https://skku.edu">Sungkyunkwan University</a>
+	I received M.S. degree from the <a href="https://skku.edu">Sungkyunkwan University</a>
 	under supervision of <a href="https://sites.google.com/site/jaepilheo/">Jae-pil Heo</a>. 
 	<br>
-	I am interested in deep learning and similarity learning including image retrieval, person re-identification.
+	Now, I am smart contract developer in EVM compatible chains such as Ethereum, Binance Smart Chain.
 	<br>
 	[<a href="https://daehyun-bae.github.io/CV_DaehyunBae.pdf">CV</a>] [<a href="https://drive.google.com/drive/folders/1HY_rrCzyYVZwYZ8-NEqw17mPYAYz0BJR?usp=sharing">Portfolio</a>]
 </div>
