--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -122,15 +122,15 @@ a.read-more {
 }
 
 #post h1 {
-  margin: 0.5em 0 1em;
+  margin: 2.5em 0 1em;
 }
 #post h2 {
-  margin: 2em 0 0.8em;
-  padding-bottom: 0.3em;
-  border-bottom: 1px solid #ddd;
+  margin: 1.8em 0 0.5em;
+  // padding-bottom: 0.3em;
+  // border-bottom: 1px solid #ddd;
 }
 #post h3 {
-  margin: 2em 0 0.5em;
+  margin: 1.8em 0 0.5em;
   position: relative;
 }
 
